Feature: Service do backend + Config e properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-spring.application.name=docsai
+# Limita o tamanho de um único arquivo
+spring.servlet.multipart.max-file-size=20MB
+# Limita o tamanho total da requisição (pode incluir outros dados do form)
+spring.servlet.multipart.max-request-size=21MB
